--- a/src/eval/requirements.txt
+++ b/src/eval/requirements.txt
@@ -1,19 +1,19 @@
-aiohttp
-anthropic
-datasets
-jinja2
-openai
-pandas
-tqdm
-transformers
-vllm
-seaborn
-smolagents
-litellm
-openai-agents
-langgraph
-langchain-openai
-pydantic-ai
-agno
-autogen-agentchat
-autogen-ext[openai]
+aiohttp==3.11.18
+anthropic==0.50.0
+datasets==3.5.1
+jinja2==3.1.6
+openai==1.76.2
+pandas==2.2.3
+tqdm==4.67.1
+transformers==4.51.3
+vllm==0.8.3
+seaborn==0.13.2
+smolagents==1.14.0
+litellm==1.67.5
+openai-agents==0.0.14
+langgraph==0.4.1
+langchain-openai==0.3.14
+pydantic-ai==0.1.8
+agno==1.4.3
+autogen-agentchat==0.5.5
+autogen-ext[openai]==0.5.5
